Añade las rutas principales con sus estilos
Se agrega en el home la navegación básica de la aplicación además de
poner el controlador de cada apartado de la página.

Phaser Js se agrega directo al 'view' de Juegos, de alguna manera no se
incorpora desde su JS del 'view' juegos.js

Se corrigio el container-fluid añadiendolo al body de
layour/aplication.html.erb

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,39 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+// TELEFONOS
+@media only screen and(max-width: 540px) {
+  .container {
+    padding: 40px;
+  }
+  .card {
+    margin-bottom: 25px !important;
+  }
+}
+//TABLETS
+@media only screen and(min-width: 540px) {
+  .card {
+    margin-bottom: 5px !important;
+  }
+}
+
+//COMPUTADORAS
+@media only screen and(min-width: 1024px) {
+  .main {
+    transform: translate(3vh, 15vw);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card {
+    width: 18rem;
+    height: 18rem;
+    padding: 20px;
+    margin: 10px;
+  }
+  .card:hover {
+    background: orange;
+    transition: 0.8s ease-out;
+  }
+
+}
+
