--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="main">
+  <div class="row">
+    <%= link_to root_path do%>
+    	<%= image_tag "aprendizaje.png", class:"card "%>
+    <%end%> 
+    <%= link_to root_path do%>       
+      <%= image_tag "juegos.png", class:"card"%>
+    <%end%> 
+    <%= link_to root_path do%>
+    	<%= image_tag "entre.png", class:"card"%>
+    <%end%> 
+  </div>
+</div>
