--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <div class="main">
   <div class="row">
-    <%= link_to root_path do%>
+    <%= link_to aprendizaje_index_path do%>
     	<%= image_tag "aprendizaje.png", class:"card "%>
     <%end%> 
-    <%= link_to root_path do%>       
+    <%= link_to juegos_index_path do%>       
       <%= image_tag "juegos.png", class:"card"%>
     <%end%> 
-    <%= link_to root_path do%>
+    <%= link_to entretenimiento_index_path do%>
     	<%= image_tag "entre.png", class:"card"%>
     <%end%> 
   </div>
